--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,4 +3,4 @@ include README.rst
 include examples/downloader.py
 include examples/mxquery.py
 include examples/ssh.py
-
+include examples/scheduling.py
