--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,8 @@
 include LICENSE
 include README.rst
+include requirements-dev.txt
+recursive-include docs *
+prune docs/_build
 include examples/downloader.py
 include examples/mxquery.py
 include examples/ssh.py
