--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,7 +3,4 @@ include README.rst
 include requirements-dev.txt
 recursive-include docs *
 prune docs/_build
-include examples/downloader.py
-include examples/mxquery.py
-include examples/ssh.py
-include examples/scheduling.py
+recursive-include examples *
