--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,20 @@
+language: python
+
 env:
-    - TWISTED=Twisted==12.0
-    - TWISTED=Twisted==12.1
-    - TWISTED=Twisted==12.2
-    - TWISTED=Twisted==12.3
-    - TWISTED=Twisted==13.0
-    - TWISTED=Twisted==13.1
-    - TWISTED=Twisted==13.2
+    - TWISTED=Twisted==12.0 RUNTESTS=trial
+    - TWISTED=Twisted==12.1 RUNTESTS=trial
+    - TWISTED=Twisted==12.2 RUNTESTS=trial
+    - TWISTED=Twisted==12.3 RUNTESTS=trial
+    - TWISTED=Twisted==13.0 RUNTESTS=trial
+    - TWISTED=Twisted==13.1 RUNTESTS=trial
+    - TWISTED=Twisted==13.2 RUNTESTS=trial
 
 matrix:
     include:
         python:
             - 3.3
         env:
-            - TWISTED=git+https://github.com/twisted/twisted.git
-
-language: python
+            - TWISTED=git+https://github.com/twisted/twisted.git RUNTESTS="python -m unittest discover"
 
 python:
     - 2.6
@@ -26,7 +26,7 @@ install:
     - pip install -q --no-use-wheel $TWISTED --use-mirrors
     - python setup.py -q install
 
-script: trial crochet
+script: $RUNTESTS crochet.tests
 
 notifications:
   email: false
