--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,12 @@ env:
     - TWISTED=Twisted==13.1 RUNTESTS=trial
     - TWISTED=Twisted==13.2 RUNTESTS=trial
 
-matrix:
-    include:
-        python:
-            - 3.3
-        env:
-            - TWISTED=git+https://github.com/twisted/twisted.git RUNTESTS="python -m unittest discover"
+#matrix:
+#    include:
+#        python:
+#            - 3.3
+#        env:
+#            - TWISTED=git+https://github.com/twisted/twisted.git RUNTESTS="python -m unittest discover"
 
 python:
     - 2.6
