--- a/.travis.yml
+++ b/.travis.yml
@@ -9,17 +9,15 @@ env:
     - TWISTED=Twisted==13.1 RUNTESTS=trial
     - TWISTED=Twisted==13.2 RUNTESTS=trial
 
-#matrix:
-#    include:
-#        python:
-#            - 3.3
-#        env:
-#            - TWISTED=git+https://github.com/twisted/twisted.git RUNTESTS="python -m unittest discover"
-
 python:
     - 2.6
     - 2.7
     - pypy
+
+matrix:
+    include:
+        python: 3.3
+        env: TWISTED=git+https://github.com/twisted/twisted.git RUNTESTS="python-m unittest discover"
 
 install:
     - python setup.py --version
