--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,3 +4,5 @@ include requirements-dev.txt
 recursive-include docs *
 prune docs/_build
 recursive-include examples *
+include versioneer.py
+include crochet/_version.py
