--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ python:
 matrix:
   include:
     - python: 3.3
-      env: TWISTED=14.0 RUNTESTS="python -m unittest discover"
+      env: TWISTED=Twisted==14.0 RUNTESTS="python -m unittest discover"
 
 install:
   - python setup.py --version
