--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
 language: python
 
 env:
-  - TWISTED=Twisted==12.1 RUNTESTS=trial
-  - TWISTED=Twisted==12.2 RUNTESTS=trial
-  - TWISTED=Twisted==12.3 RUNTESTS=trial
   - TWISTED=Twisted==13.0 RUNTESTS=trial
   - TWISTED=Twisted==13.1 RUNTESTS=trial
   - TWISTED=Twisted==13.2 RUNTESTS=trial
   - TWISTED=Twisted==14.0 RUNTESTS=trial
+  - TWISTED=Twisted==15.0 RUNTESTS=trial
+  - TWISTED=Twisted==15.1 RUNTESTS=trial
 
 python:
   - 2.6
@@ -17,7 +16,9 @@ python:
 matrix:
   include:
     - python: 3.3
-      env: TWISTED=Twisted==14.0 RUNTESTS="python -m unittest discover"
+      env: TWISTED=Twisted==15.1 RUNTESTS="python -m unittest discover"
+    - python: 3.4
+      env: TWISTED=Twisted==15.1 RUNTESTS="python -m unittest discover"
 
 install:
   - python setup.py --version
