Expand the Tox environment list for python 3 and pypy
This expands the test matrix to include pypy and Python 3.7, as well as
testing Twisted 16.0 and the latest Twisted against all interpreters.

Signed-off-by: Jeremy Cline <jcline@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,11 @@
 [tox]
-envlist = py27, py35, lint3
+envlist = lint3,{py27,py34,py35,py36,py37,pypy}-{twisted-16,twisted-latest}
 usedevelop = true
 
 [testenv]
+deps =
+    twisted-16: Twisted==16.0
+    twisted-latest: Twisted
 commands =
     {envpython} setup.py --version
     pip install .
