--- a/tox.ini
+++ b/tox.ini
@@ -18,3 +18,8 @@ deps = flake8
 basepython = python3.5
 commands = flake8 crochet
            pylint crochet
+
+[travis:env]
+TWISTED =
+  16: twisted-16
+  latest: twisted-latest
