--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = lint3,{py27,py35,py36,py37,py38,pypy,pypy3}-{twisted-16,twisted-latest}
+envlist = lint3,{py27,py35,py36,py37,pypy,pypy3}-{twisted-16,twisted-latest},py38-twisted-latest
 usedevelop = true
 
 [testenv]
