--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,10 @@ matrix:
   include:
     - python: "3.5"
       env: TOXENV=lint3
+  exclude:
+    # Twisted 16 doesn't work with Python 3.8:
+    - python: "3.8"
+      env: TWISTED="16"
 
 notifications:
   email: false
