Type hints, mypy plugin, and associated tests.

--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,17 @@
 [tox]
-envlist = lint3,{py27,py35,py36,py37,pypy,pypy3}-{twisted-16,twisted-latest},py38-twisted-latest
+envlist = lint3,{py27,py35,py36,py37,pypy,pypy3}-{twisted-16,twisted-latest},{py38,py39}-twisted-latest
 usedevelop = true
 
 [testenv]
 deps =
     twisted-16: Twisted==16.0
     twisted-latest: Twisted
+    py35,py36,py37,py38,py39: mypy==0.812
 commands =
     {envpython} setup.py --version
     pip install .
     {envpython} -m unittest {posargs:discover -v crochet.tests}
+    py35,py36,py37,py38,py39: {envpython} -m unittest {posargs:discover -v crochet.mypy.tests}
 
 [testenv:lint3]
 deps = flake8
