First attempt at switch to GitHub actions.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,15 @@
 [tox]
 envlist = lint3,{py27,py35,py36,py37,pypy,pypy3}-{twisted-16,twisted-latest},py38-twisted-latest
-usedevelop = true
+
+[gh-actions]
+python =
+    2.7: py27-twisted-16,py27-twisted-latest
+    3.5: py35-twisted-16,py35-twisted-latest
+    3.6: py36-twisted-16,py36-twisted-latest
+    3.7: py37-twisted-16,py37-twisted-latest
+    3.8: py38-twisted-16,py38-twisted-latest,lint3
+    pypy2: pypy-twisted-16,pypy-twisted-latest
+    pypy3: pypy3-twisted-16,pypy3-twisted-latest
 
 [testenv]
 deps =
@@ -15,11 +24,6 @@ commands =
 deps = flake8
        pylint
        yapf
-basepython = python3.5
+basepython = python3
 commands = flake8 crochet
            pylint crochet
-
-[travis:env]
-TWISTED =
-  16: twisted-16
-  latest: twisted-latest
