Don't bother with ancient Twisted on newish Python.

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ python =
     3.5: py35-twisted-16,py35-twisted-latest
     3.6: py36-twisted-16,py36-twisted-latest
     3.7: py37-twisted-16,py37-twisted-latest
-    3.8: py38-twisted-16,py38-twisted-latest,lint3
+    3.8: py38-twisted-latest,lint3
     pypy2: pypy-twisted-16,pypy-twisted-latest
     pypy3: pypy3-twisted-16,pypy3-twisted-latest
 
