--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,7 @@ commands =
 [testenv:lint3]
 deps = flake8
        pylint
+       mypy
 basepython = python3
 commands = flake8 crochet
            pylint crochet
