--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,17 @@
 [tox]
-envlist = lint3,{py36,py37,pypy3}-{twisted-16,twisted-latest},py{38,39,310}-twisted-latest
+envlist = lint3,{py36,py37,pypy3,py38,py39,py310}
 
 [gh-actions]
 python =
-    3.6: py36-twisted-16,py36-twisted-latest
-    3.7: py37-twisted-16,py37-twisted-latest
-    3.8: py38-twisted-latest
-    3.9: py39-twisted-latest,lint3
-    3.10-dev: py310-twisted-latest
-    pypy3: pypy3-twisted-latest
+    3.6: py36-twisted-16,py36
+    3.7: py37-twisted-16,py37
+    3.8: py38
+    3.9: py39,lint3
+    3.10-dev: py310
+    pypy3: pypy3
 
 [testenv]
 deps =
-    twisted-16: Twisted==16.0
-    twisted-latest: Twisted
     py36,py37,py38,py39: mypy==0.812
 commands =
     {envpython} setup.py --version
