--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,12 +16,17 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.6", "3.7", "3.8", "3.9", "3.10-dev", "pypy3"]
+        architecture: "x64"
+        include:
+          - python-version: "3.6"
+            architecture: "x86"
 
     steps:
       - uses: "actions/checkout@v2"
       - uses: "actions/setup-python@v2"
         with:
           python-version: "${{ matrix.python-version }}"
+          architecture: "${{ matrix.architecture }}"
       - name: "Install dependencies"
         run: |
           set -xe
