--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.6", "3.7", "3.8", "3.9", "3.10-dev", "pypy3"]
-        architecture: "x64"
+        architecture: ["x64"]
         include:
           - python-version: "3.6"
             architecture: "x86"
