--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,15 +11,17 @@ on:
 jobs:
   tests:
     name: "Python ${{ matrix.python-version }}"
-    runs-on: "ubuntu-latest"
-
     strategy:
       matrix:
         python-version: ["3.6", "3.7", "3.8", "3.9", "3.10-dev", "pypy3"]
         architecture: ["x64"]
+        platform: ["ubuntu-latest"]
         include:
           - python-version: "3.6"
             architecture: "x86"
+            platform: ["windows-latest"]
+
+    runs-on: "${{ matrix.platform }}"
 
     steps:
       - uses: "actions/checkout@v2"
