--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,9 @@ jobs:
           - python-version: "3.6"
             architecture: "x86"
             platform: "windows-latest"
+          - python-version: "3.6"
+            architecture: "x64"
+            platform: "windows-latest"
 
     runs-on: "${{ matrix.platform }}"
 
