--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = lint3,{py36,py37,pypy3,py38,py39,py310}
+envlist = lint3,{py36,py37,pypy3,py38,py39,py310.py311}
 
 [gh-actions]
 python =
@@ -7,12 +7,13 @@ python =
     3.7: py37-twisted-16,py37
     3.8: py38
     3.9: py39,lint3
-    3.10-dev: py310
+    3.10: py310
+    3.11-dev: py311
     pypy3: pypy3
 
 [testenv]
 deps =
-    py36,py37,py38,py39: mypy==0.812
+    py36,py37,py38,py39,py310: mypy==0.950
 commands =
     {envpython} setup.py --version
     pip install .
