--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,22 @@
 [tox]
-envlist = lint3,{py36,py37,pypy3,py38,py39,py310.py311}
+envlist = lint3,{py36,pypy36,py37,pypy37,py38,pypy38,py39,pypy39,py310,py311}
 
 [gh-actions]
 python =
-    3.6: py36-twisted-16,py36
-    3.7: py37-twisted-16,py37
-    3.8: py38
-    3.9: py39,lint3
+    3.6: py36-twisted-16,py36,pypy36
+    3.7: py37-twisted-16,py37,pypy37
+    3.8: py38,pypy38
+    3.9: py39,pypy39,lint3
     3.10: py310
     3.11-dev: py311
-    pypy3: pypy3
+    pypy3.6: pypy36
+    pypy3.7: pypy37
+    pypy3.8: pypy38
+    pypy3.9: pypy39
 
 [testenv]
 deps =
-    py36,py37,py38,py39,py310: mypy==0.950
+    py36,py37,py38,py39,py310: mypy==0.961
 commands =
     {envpython} setup.py --version
     pip install .
