--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,10 +1,8 @@
 name: Publish
 on:
   push:
-    #tags:
-    #  - '*'
-  pull_request:
-    branches: ["master"]
+    tags:
+      - '*'
 
 jobs:
   build:
@@ -33,7 +31,7 @@ jobs:
       - uses: actions/download-artifact@v3
       - run: |
           ls -R
-      # - name: Publish package distributions to PyPI
-      #   uses: pypa/gh-action-pypi-publish@release/v1
-      #   with:
-      #     packages_dir: artifact/
+      - name: Publish package distributions to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          packages_dir: artifact/
